<?xml version="1.0" encoding="utf-8"?>

<!-- Copyright (c) 2010-2011, The MiCode Open Source Community (www.micode.net)

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->

<!-- 便签编辑页面菜单：包含新建、删除、字体大小、分享、提醒等核心功能选项 -->
<menu
    xmlns:android="http://schemas.android.com/apk/res/android">

    <!-- 新建便签菜单项 -->
    <item
        android:id="@+id/menu_new_note"
        android:title="@string/notelist_menu_new"/>

    <!-- 删除便签菜单项 -->
    <item
        android:id="@+id/menu_delete"
        android:title="@string/menu_delete"/>

    <!-- 调整便签字体大小菜单项 -->
    <item
        android:id="@+id/menu_font_size"
        android:title="@string/menu_font_size"/>

    <!-- 切换便签列表显示模式菜单项 -->
    <item
        android:id="@+id/menu_list_mode"
        android:title="@string/menu_list_mode" />

    <!-- 分享便签菜单项 -->
    <item
        android:id="@+id/menu_share"
        android:title="@string/menu_share"/>

     <!-- 发送便签到桌面（创建小部件）菜单项 -->
    <item
        android:id="@+id/menu_send_to_desktop"
        android:title="@string/menu_send_to_desktop"/>

    <!-- 设置便签提醒菜单项 -->
    <item
        android:id="@+id/menu_alert"
        android:title="@string/menu_alert" />

    <!-- 删除便签提醒菜单项（对应字符串为menu_remove_remind，语义一致） -->
    <item
        android:id="@+id/menu_delete_remind"
        android:title="@string/menu_remove_remind" />
</menu><?xml version="1.0" encoding="utf-8"?>

<!-- Copyright (c) 2010-2011, The MiCode Open Source Community (www.micode.net)

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->

<menu
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/menu_new_note"
        android:title="@string/notelist_menu_new"/>

    <item
        android:id="@+id/menu_delete"
        android:title="@string/menu_delete"/>

    <item
        android:id="@+id/menu_font_size"
        android:title="@string/menu_font_size"/>

    <item
        android:id="@+id/menu_list_mode"
        android:title="@string/menu_list_mode" />

    <item
        android:id="@+id/menu_share"
        android:title="@string/menu_share"/>

    <item
        android:id="@+id/menu_send_to_desktop"
        android:title="@string/menu_send_to_desktop"/>

    <item
        android:id="@+id/menu_alert"
        android:title="@string/menu_alert" />

    <item
        android:id="@+id/menu_delete_remind"
        android:title="@string/menu_remove_remind" />
</menu>
